array.island.Island.scala.error
Compilation error:
Island:5: error: identifier expected but integer literal found.
    if (num[i-1]<num[i]){
              ^Island:8: error: ']' expected but '}' found.
  }
  ^